[package]
name = "langextract"
version = "0.1.0"
edition = "2024"
authors = ["dalei <guoyunlei@live.com>"]
description = "A Rust library for extracting structured data from unstructured text using Large Language Models (LLMs), featuring precise source attribution and interactive visualization capabilities."
license = "MIT"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
thiserror = "2.0.12"
uuid = { version="1.17.0", features = ["v4"] }