[package]
name = "langextract"
version = "0.1.0"
edition = "2024"
authors = ["dalei <guoyunlei@live.com>"]
description = "A Rust library for extracting structured data from unstructured text using Large Language Models (LLMs), featuring precise source attribution and interactive visualization capabilities."
license = "MIT"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
thiserror = "2.0.12"
uuid = { version="1.17.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
console = "0.16.0"
indicatif = "0.18.0"
flate2 = "1.1.2"
mime_guess = "2.0.5"
reqwest = { version = "0.11", features = ["blocking", "gzip"] }
tempfile = "3.20.0"


[dev-dependencies]
tempfile = "3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"