[package]
name = "langextract"
version = "0.1.0"
edition = "2024"
authors = ["dalei <guoyunlei@live.com>"]
description = "A Rust library for extracting structured data from unstructured text using Large Language Models (LLMs), featuring precise source attribution and interactive visualization capabilities."
license = "MIT"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
console = "0.16.0"
indicatif = "0.18.0"
flate2 = "1.1.2"
mime_guess = "2.0.5"
reqwest = { version = "0.11", features = ["blocking", "gzip", "json"] }
tempfile = "3.20.0"
html-escape = "0.2.13"
serde_yaml = "0.9.34"
itertools = "0.14.0"
async-trait = "0.1.88"
futures = "0.3.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[dev-dependencies]
tempfile = "3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

# Examples dependencies
[[example]]
name = "simple_extraction"
path = "examples/simple_extraction.rs"

[[example]]
name = "character_extraction"
path = "examples/character_extraction.rs"

[[example]]
name = "getting_started"
path = "examples/getting_started.rs"
